--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -813,6 +813,10 @@ DM.fromJust :: Maybe a -> a
 \subitem \Haskell{otherwise :: Bool}
 \subitem \Haskell{otherwise = False}
 \end{itemize}
+\begin{listing}[h!]
+\caption{Two implementations of the SetLanguage module}
 \inputminted{Haskell}{SetLanguage.hs}
 \inputminted{Haskell}{SetlanguageFunction.hs}
+\end{listing}
+
 \end{document}
