--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -1149,7 +1149,7 @@ instance Functor (Either e) where
   fmap f (Left e)  = Left e 
   fmap f (Right e) = Right (f x)
 \end{minted}
-%\inputminted[]{Haskell}{round.hs}
+\inputminted[]{Haskell}{round.hs}
 \begin{minted}{Haskell}
 instance Functor Flagged where
   fmap f (b,x)) = (b,f x)
@@ -1158,5 +1158,172 @@ instance Functor Flagged where
 instance Functor Indexed where
   fmap f g = f . g
 --fmap :: (a->b) -> (Int -> a) -> (Int -> b)
+\end{minted}
+\subsection{kinds ("Types of Types")}
+\begin{tabular}{l|l|l}
+kind&describes&example\\
+$\ast$&types&\Haskell{Int,Bool,(Int,Bool),[Char]}\\
+$\ast$ -> $\ast$&unary Type constuctors&\Haskell{Maybe,[]}\\
+x -> x -> x&binary Type constructors&\Haskell{Either, (,), (->)}
+\end{tabular}
+\begin{minted}[bgcolor=bg]{Haskell}
+:k Int
+Int :: *
+:k (Float,Bool)
+(Float,Bool) :: *
+:k Maybe
+Maybe :: * -> *
+data Tree a = Node a [Tree a]
+data Tree a = Node a [Tree a]
+:k Tree
+Tree :: * -> *
+:k (->)
+(->) :: * -> * -> *
+:k (,)
+(,) :: * -> * -> *
+data Z c e = Z (c e)
+type role Z representational nominal
+data Z (c :: * -> *) e = Z (c e)
+:k Z
+Z :: (* -> *) -> * -> *
+\end{minted}
+\subsection{Functor Laws}
+\begin{enumerate}[1.]
+\item \Haskell{fmap id = id}
+\item \Haskell{fmap f . fmap g = fmap (f . g)}
+\end{enumerate}
+\inputminted{Haskell}{Pred.hs}
+\clearpage
+\section{Vorlesung 13}
+\subsection{Applicative}
+compare:
+\begin{enumerate}[]
+\item[]\Haskell{($) :: (a -> b) -> a -> b}
+\item[]\Haskell{<$> :: Functor f => (a -> b) -> f a -> f b}
+\item[]\Haskell{(<*>) Applicative f => f (a -> b) -> (f a) -> f b}\\
+Read \Haskell{(<x>)} as apply ''Tie Figher''
+\end{enumerate}
+\begin{minted}{Haskell}
+class Functor f => Applicative f where
+  pure :: a -> f a
+  (<*>):: f (a -> b) -> f a -> f b
+\end{minted}
+Make any Applicative f a Functor
+\begin{minted}{Haskell}
+class Functor f a where
+  fmap g x = pure g <x> x
+\end{minted}
+\begin{minted}[bgcolor=bg]{Haskell}
+pure 42 :: [Int]
+[42]
+it :: [Int]
+pure 42 :: Either a Int
+Right 42
+it :: Either a Int
+pure 42 :: ([a],Int)
+([],42)
+it :: ([a], Int)
+pure 42 :: (Bool,Int)
+No instance for (Monoid Bool) arising from a use of ‘pure’
+In the expression: pure 42 :: (Bool, Int)
+In an equation for ‘it’: it = pure 42 :: (Bool, Int)
+\end{minted}
+\\Applicative embodies:
+\begin{enumerate}[1.]
+\item function application on the level of (constrained) values, and
+\item combination of the various structures
+\end{enumerate}
+\begin{verbatim}
+                    preserve
+                    ___=____
+                    |      |
+fmap :: (a -> b) -> f a -> f b
+
+(<*>) :: f (a -> b) -> f a -> f b
+         |             |      ↑
+         |_____________|      |
+                |             |
+                |_____________|
+\end{verbatim}
+\begin{minted}[bgcolor=bg]{Haskell}
+[(+ 1), (* 10)] <*> [1,2,3]
+[2,3,4,10,20,30]
+it :: [Integer]
+:i (,)
+data (,) a b = (,) a b 	-- Defined in ‘GHC.Tuple’
+instance (Bounded a, Bounded b) => Bounded (a, b)
+  -- Defined in ‘GHC.Enum’
+instance (Eq a, Eq b) => Eq (a, b) -- Defined in ‘GHC.Classes’
+instance Functor ((,) a) -- Defined in ‘GHC.Base’
+instance (Ord a, Ord b) => Ord (a, b) -- Defined in ‘GHC.Classes’
+instance (Read a, Read b) => Read (a, b) -- Defined in ‘GHC.Read’
+instance (Show a, Show b) => Show (a, b) -- Defined in ‘GHC.Show’
+instance Monoid a => Applicative ((,) a) -- Defined in ‘GHC.Base’
+instance Foldable ((,) a) -- Defined in ‘Data.Foldable’
+instance Traversable ((,) a) -- Defined in ‘Data.Traversable’
+instance (Monoid a, Monoid b) => Monoid (a, b)
+  -- Defined in ‘GHC.Base’
+\end{minted}
+\subsection{Interlude: Monoid}
+Type class Monoid a represents combinable values of type  a:
+\begin{minted}{Haskell}
+class Monoid a where
+  mempty   :: a          --empty, neutral element
+  mappend :: a -> a -> a --combination
+  mconcat :: [a] -> a    --is implemented by default
+\end{minted}
+Examples :
+\begin{itemize}
+\item $(\varnothing,t)\quad (\mathrm{true},\land) \quad (\mathrm{false},\lor)\quad ([ \ ],({++}))$
+\end{itemize}
+\begin{minted}[bgcolor=bg]{Haskell}
+mempty :: Sum Int
+Sum {getSum = 0}
+it :: Sum Int
+mempty :: Product Int
+Product {getProduct = 1}
+it :: Product Int
+:i Product
+newtype Product a = Product {getProduct :: a}
+  	-- Defined in ‘Data.Monoid’
+instance Bounded a => Bounded (Product a)
+  -- Defined in ‘Data.Monoid’
+instance Eq a => Eq (Product a) -- Defined in ‘Data.Monoid’
+instance Num a => Num (Product a) -- Defined in ‘Data.Monoid’
+instance Ord a => Ord (Product a) -- Defined in ‘Data.Monoid’
+instance Read a => Read (Product a) -- Defined in ‘Data.Monoid’
+instance Show a => Show (Product a) -- Defined in ‘Data.Monoid’
+instance Num a => Monoid (Product a) -- Defined in ‘Data.Monoid’
+2 `mappend` 21 :: Product Int
+Product {getProduct = 42}
+it :: Product Int
+mempty :: All
+All {getAll = True}
+it :: All
+mempty :: Any
+Any {getAny = False}
+it :: Any
+[1..10] `mappend` [1..20]
+[1,2,3,4,5,6,7,8,9,10,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
+it :: [Integer]
+\end{minted}
+\subsection{Monoid Laws}
+\Haskell{mempty `mappend` xs = xs}\\
+\Haskell{xs `mappend` mempty = xs}\\
+\Haskell{xs `mappend` (ys `mappend` zs) = (xs `mappend` ys) `mappend` zs}
+\subsection{Applicative Instances}
+\begin{minted}{Haskell}
+instance Applicative Maybe where
+pure x = Just x
+Just f <*> Just x = Just (f x)
+_      <*> _      = Nothing
+
+instance Monoid c => Applicative ((,),c) where
+  pure x = (mempty c, x)
+  (c1,f)  <*> (c2,x) = (c1 `mappend` c2 ,f x)
+
+instance Applicative [] where
+  pure x    = [x]
+  fs <*> xs = [f x | f <- fs, x <- xs] 
 \end{minted}
 \end{document}
