small typo: Either a b = Left a | Right a was wrong

--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -594,7 +594,7 @@ c (class)&operations\\ \hline
 \item Product, r = 1, $n_1 = 2$ (\ref{sequence.hs})
 \item Sum of Products:
 \subitem \Haskell{Maybe a} = \Haskell{Nothing | Just a}
-\subitem \Haskell{data Either a b} = \Haskell{Left a | Right a}
+\subitem \Haskell{data Either a b} = \Haskell{Left a | Right b}
 \subitem \Haskell{List a = Nil} 
 \subitem \phantom{List a}\ | \Haskell{Cons a (List a)}
 \end{itemize}
