Refreshed PDF and figured out how to compile this thing for TeXLive 2016 ;)

--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -10,8 +10,8 @@
 \usepackage{nicefrac}
 \fancyhf{}
 \fancyhead[C]{Torsten Grust - Functional Programming}
-\usepackage{fontspec}
-\setmonofont{Andale Mono}
+%\usepackage{fontspec}
+%\setmonofont{Andale Mono}
 \usepackage[english]{babel}
 \author{Finn Ickler}
 \usepackage{mdframed}
