--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -648,7 +648,7 @@ lookup :: Eq a => a -> a [(a,b)] -> Maybe b
 Defining class $(c_1a,c_2a,\ldots)$ \Haskell{=>} (\Haskell{a where ...}) makes type class C a \emph{subclass} of the $c_1$ C inherits all methods of the $c_i$.\\
 (\Haskell{a => t} implies $(c_1a,c_2a,\ldots,Ca)$\Haskell{=> t})
 \clearpage
-\includegraphics[scale=0.7]{classes.png}
+\includegraphics[scale=0.7]{Classes.png}
 \newpage
 \subsection{Class Instances}
 If type t implements the method of class C, t becomes an \emph{instance} of c:
@@ -818,7 +818,7 @@ DM.fromJust :: Maybe a -> a
 \begin{listing}[h!]
 \caption{Two implementations of the SetLanguage module}
 \inputminted{Haskell}{SetLanguage.hs}
-\inputminted{Haskell}{SetlanguageFunction.hs}
+\inputminted{Haskell}{SetLanguageFunction.hs}
 \end{listing}
 \clearpage
 \section{Vorlesung 8}
